# hierarchical_data

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml
adminapp/: asgi.py  settings.py  urls.py  wsgi.py
project/: admin.py  models.py  urls.py  views.py
project/migrations/: 0001_initial.py
project/templates/: index.html
